<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="10dp"
    android:gravity="center"
    android:background="#edf4f5"
    android:layout_marginBottom="8dp">

    <TextView
        android:id="@+id/userId_user_report"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:text="@string/rec_view_user_report_id"
        android:layout_marginLeft="12dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        />

    <TextView
        android:id="@+id/fullName_user_report"
        android:layout_width="172dp"
        android:layout_height="wrap_content"
        android:text="@string/rec_view_user_report_fullName"
        android:layout_marginLeft="12dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        />



    <TextView
        android:id="@+id/typeId_user_report"
        android:layout_width="168dp"
        android:layout_height="wrap_content"
        android:text="@string/rec_view_user_report_typeId"
        android:layout_marginLeft="22dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        />

    <TextView
        android:id="@+id/enabled_user_report"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:text="@string/rec_view_user_report_enabled"
        android:layout_marginLeft="22dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        />

    <TextView
        android:id="@+id/lastEdit_user_report"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:text="@string/rec_view_user_report_lastEdit"
        android:layout_marginLeft="18dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        />

    <TextView
        android:id="@+id/posCode_user_report"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:text="@string/rec_view_user_report_posCode"
        android:layout_marginLeft="18dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        />



    <TextView
        android:id="@+id/expired_user_report"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:text="@string/rec_view_user_report_expired"
        android:layout_marginLeft="12dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        />



    <ImageView
        android:id="@+id/iv_edit_user_report"
        android:src="@drawable/ic_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        />


</LinearLayout>