<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.UsersReportScreen">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <android.support.v7.widget.Toolbar
                    android:id="@+id/users_report_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/zxing_transparent"/>


                <LinearLayout
                    android:id="@+id/header_user_report"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:layout_marginLeft="12dp"
                    android:background="#e6fcff"
                    >



                    <TextView
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:text="@string/rec_view_user_report_header_id"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:layout_marginLeft="156dp"
                        />

                    <TextView
                        android:layout_width="172dp"
                        android:layout_height="wrap_content"
                        android:text="@string/rec_view_user_report_header_fullName"
                        android:layout_marginLeft="12dp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        />

                    <TextView
                        android:layout_width="168dp"
                        android:layout_height="wrap_content"
                        android:text="@string/rec_view_user_report_header_typeId"
                        android:layout_marginLeft="22dp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        />

                    <TextView
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:text="@string/rec_view_user_report_header_enabled"
                        android:layout_marginLeft="22dp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        />

                    <TextView
                        android:layout_width="130dp"
                        android:layout_height="wrap_content"
                        android:text="@string/rec_view_user_report_header_lastEdit"
                        android:layout_marginLeft="18dp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        />

                    <TextView
                        android:layout_width="130dp"
                        android:layout_height="wrap_content"
                        android:text="@string/rec_view_user_report_header_posCode"
                        android:layout_marginLeft="18dp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        />



                    <TextView
                        android:layout_width="115dp"
                        android:layout_height="wrap_content"
                        android:text="@string/rec_view_user_report_header_expired"
                        android:layout_marginLeft="12dp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        />


                </LinearLayout>


                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recycler_view_operators_report"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    tools:listitem="@layout/rec_view_user_report_item"/>


</LinearLayout>



    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_add_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:src="@drawable/ic_add_white"
        android:layout_margin="26dp" />

</android.support.design.widget.CoordinatorLayout>