<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="60dp"
    android:paddingBottom="60dp"
    android:paddingLeft="50dp"
    android:paddingRight="50dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/would_you_like_to_deposit_coins"
        android:textSize="26sp"
        android:layout_marginBottom="34sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <Button
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_marginRight="70dp"
            android:id="@+id/btnProceedForward"
            android:background="@drawable/green_rounded_button"
            android:text="@string/yes"
            android:textSize="20sp"/>

        <Button
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:id="@+id/btnNotProceedForward"
            android:background="@drawable/red_rounded_button"
            android:text="@string/no"
            android:textSize="20sp"/>

    </LinearLayout>

</LinearLayout>